--- a/sass/components/_heder-page.scss
+++ b/sass/components/_heder-page.scss
@@ -1,115 +1,48 @@
+.header{ 
 
-.logo--header {
-    margin-top: 24px;
-    margin-bottom: 25px;
-    margin-right: 93px;
-  }
-
-
-.header {
-    border-bottom: 1px solid #ececec;
-  
-    &__cointainer {
-      display: flex;
-    }
-
-    &__link {
-    @extend %header__link;
-    color: $title-text-color;
-  
+    &__block-mobile {
     display: flex;
-    padding-top: 32px;
-    padding-bottom: 32px;
-  
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
-
-      &:hover,
-      &:focus {
-    color: $focys-hover-color;
-  }
-}
-
-  &__nav {
-    margin-right: auto;
-  }
-
-  &__nav-block {
-    display: flex;
-    padding-left: 0px;
-  }
-  
-  &__item:not(:last-child) {
-    margin-right: 50px;
-  }
-
-  &__mail {
-    margin-right: 30px;
-  }
-
-  &__portfolio {
-    position: relative;
-    color: $accent-color;
-  
-
-      &::after {
-    position: absolute;
-    bottom: 0;
-    content: "";
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
-    background-color: $accent-color;
-  }
-}
-
-  &__studio {
-    position: relative;
-    color:$accent-color;
-  
-
-     &::after {
-    position: absolute;
-    bottom: -1px;
-    content: "";
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
-    background-color: $focys-hover-color;
-  }
-}
-
-  &__contact {
-    display: flex;
-    padding-left: 0px;
-  }
-
-  &__link--contakt {
-    @extend %header__link;
-    color: $primer-text-color;
     align-items: center;
-  
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
-
-      &:hover,
-      &:focus {
-    color: $focys-hover-color;
-    fill: $focys-hover-color;
   }
+
+&__mob--menu{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0%;
 
 }
 
-  &__icon {
-    width: 16px;
-    height: 12px;
-    --icon-color: currentColor;
-    margin-right: 10px;
+}
+
+.menu-button{
+    padding: 0;
+    border:0;
+    border-color: $color-white;
+    background-color: $color-white;
+    margin:10px 0;
+
   }
 
-  &__mail {
-    fill:$primer-text-color;
+
+
+
+.menu-button .icon-close {
+  opacity: 0;
+}
+
+.menu-button.is-open .icon-close {
+  opacity: 1;
+}
+
+.menu-button.is-open .icon-menu {
+  opacity: 0;
+}
+
+
+.logo--header{
+
+    @media screen and (max-width:767px) {
+    margin: 16px auto 16px 0px;
   }
-  
 }
