--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -41,12 +41,29 @@ ul {
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
-    width: 1200px;
+
+  @media screen and (min-width: 480px) {
+    width: 480px; }
+
+  @media screen and (min-width: 768px) {
+    width: 768px;
   }
 
+  @media screen and (min-width: 1200px) {
+  width: 1200px;
+  }
+}
+
 .section {
+
+   &:not(first-child) {
+     padding-top: 60px;
+    }
+
+  @media screen and (min-width: 1200px) {
     padding: 94px 0px;
   }
+}
 
 .text__transporent {
     position: absolute;
@@ -59,4 +76,4 @@ ul {
     clip: rect(0 0 0 0);
     clip-path: inset(50%);
     margin: -1px;
-  }
+    }
