--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -83,19 +83,25 @@ ul {
 
 /*  heder-link */
 /* text-btn-hero */
+.header {
+  position: relative;
+}
+
 .header__block-mobile {
   display: flex;
-  align-items: center;
 }
 
 .header__mob--menu {
   position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0%;
+  width: 480px;
+  height: 796px;
+  top: 0;
+  left: 0;
+  text-align: center;
 }
 
 .menu-button {
+  display: inline-flex;
   padding: 0;
   border: 0;
   border-color: #ffffff;
