--- a/sass/components/_heder-page.scss
+++ b/sass/components/_heder-page.scss
@@ -1,21 +1,25 @@
 .header{ 
+  position: relative;
 
     &__block-mobile {
     display: flex;
-    align-items: center;
   }
 
 &__mob--menu{
   position: absolute;
   width: 100%;
-  height: 100%;
-  top: 0%;
+  height: 796px;
+  top: 0;
+  left: 0;
+  text-align: center;
+  
 
 }
 
 }
 
 .menu-button{
+  display: inline-flex;
     padding: 0;
     border:0;
     border-color: $color-white;
