--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -50,7 +50,7 @@ ul {
   }
 }
 
-.section:not(first-child) {
+.section {
   padding-top: 60px;
 }
 
@@ -58,6 +58,10 @@ ul {
   .section {
     padding: 94px 0px;
   }
+}
+
+.section:first-child {
+  padding-top: 0px;
 }
 
 .text__transporent {
@@ -85,19 +89,186 @@ ul {
 /* text-btn-hero */
 .header {
   position: relative;
+  border-bottom: 1px solid #ececec;
+}
+
+@media screen and (min-width: 768px) {
+  .header__cointainer {
+    display: flex;
+  }
 }
 
 .header__block-mobile {
   display: flex;
 }
 
-.header__mob--menu {
-  position: absolute;
-  width: 100%;
-  height: 796px;
-  top: 0;
-  left: 0;
-  text-align: center;
+@media screen and (max-width: 767px) {
+  .header__mob--menu {
+    position: absolute;
+    width: 100%;
+    height: 796px;
+    top: 0;
+    left: 0;
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header__mob--menu {
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header__nav {
+    margin-right: auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header__nav {
+    margin-right: 300px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header__nav-block {
+    display: flex;
+    padding-left: 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header__item {
+    margin-right: 50px;
+  }
+}
+
+.header__item:last-child {
+  margin-right: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .header__link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.4;
+    letter-spacing: 0.02em;
+    text-decoration: none;
+    color: #212121;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    display: flex;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+
+.header__link:hover, .header__link:focus {
+  color: #2196f3;
+}
+
+@media screen and (min-width: 768px) {
+  .header__contact {
+    align-items: center;
+    margin-left: 50px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header__contact {
+    display: flex;
+    margin-left: auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header__link--contakt {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.4;
+    letter-spacing: 0.02em;
+    text-decoration: none;
+    color: #757575;
+    align-items: center;
+    padding-top: 0;
+    padding-bottom: 0;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header__link--contakt {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header__link--contakt:hover, .header__link--contakt:focus {
+    color: #2196f3;
+    fill: #2196f3;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header__icon {
+    width: 16px;
+    height: 12px;
+    --icon-color: currentColor;
+    margin-right: 10px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header__mail {
+    fill: #757575;
+    margin-top: 21px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header__mail {
+    margin-right: 30px;
+    margin-top: 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header__portfolio {
+    position: relative;
+    color: #2196f3;
+  }
+}
+
+@media screen and (min-width: 768px) and (min-width: 768px) {
+  .header__portfolio::after {
+    position: absolute;
+    bottom: 0;
+    content: "";
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #2196f3;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header__studio {
+    position: relative;
+    color: #2196f3;
+  }
+}
+
+@media screen and (min-width: 768px) and (min-width: 768px) {
+  .header__studio::after {
+    position: absolute;
+    bottom: -1px;
+    content: "";
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #2196f3;
+  }
 }
 
 .menu-button {
@@ -108,21 +279,39 @@ ul {
   margin: 10px 0;
 }
 
+@media screen and (min-width: 768px) {
+  .menu-button {
+    display: none;
+  }
+}
+
 .menu-button .icon-close {
-  opacity: 0;
+  display: none;
 }
 
 .menu-button.is-open .icon-close {
-  opacity: 1;
+  display: block;
 }
 
 .menu-button.is-open .icon-menu {
-  opacity: 0;
+  display: none;
 }
 
 @media screen and (max-width: 767px) {
   .logo--header {
     margin: 16px auto 16px 0px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .logo--header {
+    margin: 26px 88px 26px 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .logo--header {
+    margin: 24px 93px 25px 0;
   }
 }
 
