--- a/sass/components/_heder-page.scss
+++ b/sass/components/_heder-page.scss
@@ -1,19 +1,173 @@
 .header{ 
-  position: relative;
+    position: relative;
+    border-bottom: 1px solid #ececec;
+
+    &__cointainer{
+      @media screen and(min-width:768px){
+        display: flex;
+      }
+    }
 
     &__block-mobile {
     display: flex;
   }
 
 &__mob--menu{
+
+  @media screen and(max-width:767px){
   position: absolute;
   width: 100%;
   height: 796px;
   top: 0;
   left: 0;
-  text-align: center;
+  text-align: center;}
+  
+  
+  @media screen and(min-width:768px){
+  display:flex;}
+}
+
+&__nav{
+  @media screen and(min-width:768px){
+    margin-right: auto;}
+
+  @media screen and(min-width:1200px){
+    margin-right: 300px;
+  }
+
+}
+
+  &__nav-block{
+    @media screen and(min-width:768px){
+      display:flex;
+    padding-left: 0;}
+}
+
+&__item{ 
+  @media screen and(min-width:768px){
+  margin-right: 50px;}
+
+    &:last-child {
+      margin-right: 0;
+    }
+}
+
+&__link {
+  @media screen and(min-width:768px){
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.4;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: $title-text-color;
+  padding-top: 32px;
+  padding-bottom: 32px;
+
+  display: flex;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+
+
+    &:hover,
+    &:focus {
+  color: $focys-hover-color;}
+
+}
+
+
+&__contact{
+@media screen and(min-width:768px){
+align-items: center;
+margin-left: 50px;}
+
+@media screen and(min-width:1200px){
+  display: flex;
+margin-left: auto;
+
+}
+}
+
+&__link--contakt {
+    @media screen and(min-width:768px){
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.4;
+    letter-spacing: 0.02em;
+    text-decoration: none;
+    color: $primer-text-color;
+    align-items: center;
+    padding-top: 0;
+    padding-bottom: 0;
+  
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+    @media screen and(min-width:1200px){
+      padding-top: 32px;
+      padding-bottom: 32px; 
+    }
   
 
+
+    &:hover,
+    &:focus{
+    @media screen and(min-width:768px){
+    color: $focys-hover-color;
+    fill: $focys-hover-color;}
+}
+}
+
+&__icon {
+  @media screen and(min-width:768px){
+  width: 16px;
+  height: 12px;
+  --icon-color: currentColor;
+  margin-right: 10px;}
+}
+
+&__mail {
+  @media screen and(min-width:768px){
+  fill:$primer-text-color;
+  margin-top: 21px;}
+
+  @media screen and(min-width:1200px){
+  margin-right: 30px;
+  margin-top: 0;}
+}
+
+&__portfolio {
+  @media screen and(min-width:768px){
+  position: relative;
+  color: $accent-color;
+
+
+    &::after {
+  @media screen and(min-width:768px){
+  position: absolute;
+  bottom: 0;
+  content: "";
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: $accent-color;}}
+}
+}
+
+&__studio {
+  @media screen and(min-width:768px){
+  position: relative;
+  color:$accent-color;
+
+
+   &::after {
+  @media screen and(min-width:768px){
+  position: absolute;
+  bottom: -1px;
+  content: "";
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: $focys-hover-color;}}
+}
 }
 
 }
@@ -25,27 +179,37 @@
     background-color: $color-white;
     margin:10px 0;
 
+    @media screen and(min-width:768px) {
+      display: none;
+    }
+
   }
 
 
 
 
 .menu-button .icon-close {
-  opacity: 0;
+  display: none;
 }
 
 .menu-button.is-open .icon-close {
-  opacity: 1;
+  display: block;
 }
 
 .menu-button.is-open .icon-menu {
-  opacity: 0;
+  display: none;
 }
 
 
 .logo--header{
 
     @media screen and (max-width:767px) {
-    margin: 16px auto 16px 0px;
-  }
+    margin: 16px auto 16px 0px;}
+
+    @media screen and(min-width:768px){
+      margin: 26px 88px 26px 0;
+    }
+    @media screen and(min-width:1200px){
+      margin: 24px 93px 25px 0;
+    }
 }
