--- a/sass/components/_heder-page.scss
+++ b/sass/components/_heder-page.scss
@@ -13,14 +13,16 @@
   }
 
 &__mob--menu{
-
   @media screen and(max-width:767px){
   position: absolute;
-  width: 100%;
-  height: 796px;
+  width: 100vw;
+  height: 100vh;
   top: 0;
   left: 0;
-  text-align: center;}
+  text-align: center;
+  background-color: #fff;
+  transform: translateX(-100%);}
+
   
   
   @media screen and(min-width:768px){
@@ -44,21 +46,32 @@
 }
 
 &__item{ 
+  @media screen and(max-width:767px){
+    text-align: left;
+    margin-top: 32px;
+    margin-left: 40px;
+  }
+
   @media screen and(min-width:768px){
   margin-right: 50px;}
 
     &:last-child {
       margin-right: 0;
     }
+
+    &:first-child {
+      @media screen and(max-width:767px){
+      margin-top: 48px;}
+    }
 }
 
 &__link {
+  @extend %header__link;
+  font-size: 40px;
+  line-height: 1.175;
   @media screen and(min-width:768px){
-  font-weight: 500;
   font-size: 14px;
-  line-height: 1.4;
-  letter-spacing: 0.02em;
-  text-decoration: none;
+  line-height: 1.14;
   color: $title-text-color;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -76,6 +89,13 @@
 
 
 &__contact{
+  @media screen and (max-width:767px){
+  display: flex;
+  flex-direction: column-reverse;
+  text-align: left;
+  margin-top: 300px;
+  margin-left: 40px;}
+
 @media screen and(min-width:768px){
 align-items: center;
 margin-left: 50px;}
@@ -88,12 +108,21 @@ margin-left: auto;
 }
 
 &__link--contakt {
+    @extend %header__link;
+
+    @media screen and (max-width:767px) {
+      font-size: 24px;
+      line-height: 1.16px;
+    
+      color: $primer-text-color;
+    }
+
+    font-size: 34px;
+    line-height: 1.176;
     @media screen and(min-width:768px){
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.4;
-    letter-spacing: 0.02em;
-    text-decoration: none;
+    font-size: 12px;
+    line-height: 1.1666;
+
     color: $primer-text-color;
     align-items: center;
     padding-top: 0;
@@ -102,9 +131,13 @@ margin-left: auto;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);}
     @media screen and(min-width:1200px){
+      font-size: 14px;
+      line-height: 1.14;
       padding-top: 32px;
       padding-bottom: 32px; 
+
     }
+
   
 
 
@@ -114,24 +147,45 @@ margin-left: auto;
     color: $focys-hover-color;
     fill: $focys-hover-color;}
 }
+
+    &-tel{
+      @media screen and (max-width:767px){
+        font-weight: 500;
+        font-size: 34px;
+        line-height: 1.17;
+
+        letter-spacing: 0.02em;
+
+        color: $accent-color;
+
+      }
+    }
 }
 
 &__icon {
+  @media screen and(max-width:767px){
+    display: none;}
+
   @media screen and(min-width:768px){
-  width: 16px;
-  height: 12px;
   --icon-color: currentColor;
   margin-right: 10px;}
 }
 
 &__mail {
+@extend  %header__link ;
+
+@media screen and(max-width:767px){
+  margin-top: 32px;}
+
   @media screen and(min-width:768px){
   fill:$primer-text-color;
-  margin-top: 21px;}
+  margin-top: 21px;
+  margin-bottom: 10px;}
 
   @media screen and(min-width:1200px){
   margin-right: 30px;
-  margin-top: 0;}
+  margin-top: 0;
+  margin-bottom: 0px;}
 }
 
 &__portfolio {
@@ -185,20 +239,27 @@ margin-left: auto;
 
   }
 
+  .header__mob--menu.is-open{
+    transform: translateX(0);
+  }
 
+.menu-button--close{
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 0;
+    border:0;
+    border-color: $color-white;
+    background-color: $color-white;
+    margin-top: 10px;
+    margin-right: 15px;
 
+    @media screen and(min-width:768px) {
+      display: none;
+    }
 
-.menu-button .icon-close {
-  display: none;
-}
+  }
 
-.menu-button.is-open .icon-close {
-  display: block;
-}
-
-.menu-button.is-open .icon-menu {
-  display: none;
-}
 
 
 .logo--header{
