--- a/sass/desktop/_logo-compani.scss
+++ b/sass/desktop/_logo-compani.scss
@@ -4,10 +4,20 @@
   &__web {
     color: $accent-color;
     @extend %logo-text;
-  }
+    @media screen and (max-width: 767px){
+      font-size: 24px;
+      line-height: 28px;
+    }
+      
+    }
+  
 
   &__studio {
     color: #000000;
     @extend %logo-text;
+    @media screen and (max-width: 767px){
+      font-size: 24px;
+      line-height: 28px;
+    }
   }
 }
