--- a/sass/utils/main.scss
+++ b/sass/utils/main.scss
@@ -1,6 +1,7 @@
 @import "./variables";
 @import "./placeholders";
 @import "../components/heder-page";
+@import "../components/menu-social-heder-mob";
 @import "../components/logo-compani";
 @import "../components/hero";
 @import "../components/positive-features";
