--- a/sass/utils/portfolio.scss
+++ b/sass/utils/portfolio.scss
@@ -1,6 +1,7 @@
 @import "../utils/variables";
 @import "../utils/placeholders";
 @import "../components/heder-page";
+@import "../components/menu-social-heder-mob";
 @import "../components/logo-compani";
 @import "../components/portfolio-btn-grup";
 @import "../components/portfolio-project";
