--- a/sass/components/_positive-features.scss
+++ b/sass/components/_positive-features.scss
@@ -1,29 +1,47 @@
 .positive-features {
     padding-bottom: 0px;
     
-  /*   &__icon {
+    &__item {
+      @media screen and(min-width:768px){
         display: flex;
-        justify-content: space-between;
-      } */
+        flex-wrap: wrap;}
+
+      @media screen and(min-width:1200px){
+        display: flex;
+        justify-content: space-between;}
+      }
 
     &__fon {
-        background-color: $primary-bg-color;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+      background-color: $primary-bg-color;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+        width: 100%;
+        height: 120px; 
 
         @media screen and (min-width: 480px){
-         width: 450px;
-         height: 120px;   
-        }
+        width: 450px;}
+
+        @media screen and (min-width: 768px){
+          width: 354px;}
+
+        @media screen and (min-width: 1200px){
+          width: 270px;}
+
         margin-bottom: 30px;
-        /* width: 270px;
-        height: 120px; */
       }
 
     &__paragraph {
-        margin-bottom: 30px;
-        width: 270px;
+      margin-bottom: 30px;
+
+      @media screen and (min-width: 768px){
+      width: calc((100% - 2 * 30px) / 2);
+      margin: 15px;}
+
+      @media screen and (min-width: 1200px){
+        width: calc((100% - 4 * 30px) / 4);
+        margin-right: 15px;}         
       }
 
     &__svg {
@@ -31,22 +49,21 @@
         height: 70px;
       }
 
- /*    &__item {
-        display: flex;
-        justify-content: space-between;
-      
-
-        & :not(:last-child) {
-        margin-right: 30px;
-      }
-    } */
-
     &__title {
         @extend %second-heading;
         margin-bottom: 10px;
+
+        @media screen and (min-width: 480px){
+          width: 450px;}
+
         @media screen and (max-width: 767px){
             text-align: center;
         }
+        @media screen and (min-width: 768px){
+          width: 354px;}
+
+        @media screen and (min-width: 1200px){
+          width: 270px;}
       }
 
     &__text {
@@ -56,9 +73,11 @@
         line-height: 1.71;
         letter-spacing: 0.03em;
 
-        @media screen and (max-width: 767px){
-            text-align: center;
+        @media screen and (min-width: 768px){
+          width: 354px;}
+
+        @media screen and (min-width: 1200px){
+          width: 270px;}
         }
-      }
       
   }
