--- a/sass/desktop/_work-block.scss
+++ b/sass/desktop/_work-block.scss
@@ -36,6 +36,9 @@
         color: #ffffff;
         z-index: 1;
       }
-  
-
 }
+
+.work__sectiom{
+  @media screen and (max-width: 1199px){
+    display: none;}
+  }
