--- a/sass/components/_work-block.scss
+++ b/sass/components/_work-block.scss
@@ -2,6 +2,12 @@
 
     &__name {
     @extend  %heading-sechion;
+
+    @media screen and(max-width:1199px) {
+      font-size: 28px;
+      line-height: 1.18;
+      text-align: center;
+      letter-spacing: 0.03em;}
     }  
 
     &__box {
