--- a/css/main.css
+++ b/css/main.css
@@ -78,7 +78,7 @@ ul {
 }
 
 /* logo text */
-.logo__web, .logo__studio {
+.logo__web, .logo__studio, .logo__studio-footer {
   font-family: Raleway, cursive;
   font-size: 26px;
   line-height: 1.19;
@@ -92,7 +92,7 @@ ul {
   text-decoration: none;
 }
 
-.work__name, .team__development {
+.work__name, .team__development, .client__text {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.67;
@@ -114,7 +114,7 @@ ul {
   letter-spacing: 0.03em;
 }
 
-.social__link {
+.social__link, .social-network__link {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -129,8 +129,21 @@ ul {
   --icon-color: currentColor;
 }
 
+.footer__title, .footer__link {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+
+.footer__slogan, .footer__email {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+}
+
 /* text-btn-hero */
-.hero__button {
+.hero__button, .footer__button {
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
@@ -139,7 +152,7 @@ ul {
   color: #fff;
 }
 
-.hero__button {
+.hero__button, .footer__button {
   cursor: pointer;
   border-radius: 4px;
   border: 0px;
@@ -630,7 +643,7 @@ ul {
 @media screen and (min-width: 1200px) {
   .positive-features__paragraph {
     width: calc((100% - 4 * 30px) / 4);
-    margin-right: 15px;
+    margin-right: 0px;
   }
 }
 
@@ -686,6 +699,15 @@ ul {
   }
 }
 
+@media screen and (max-width: 1199px) {
+  .work__name {
+    font-size: 28px;
+    line-height: 1.18;
+    text-align: center;
+    letter-spacing: 0.03em;
+  }
+}
+
 .work__box {
   display: flex;
   justify-content: space-between;
@@ -736,6 +758,15 @@ ul {
   }
 }
 
+@media screen and (max-width: 1199px) {
+  .team__development {
+    font-size: 28px;
+    line-height: 1.18;
+    text-align: center;
+    letter-spacing: 0.03em;
+  }
+}
+
 .team__block {
   text-align: center;
 }
@@ -757,6 +788,7 @@ ul {
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  margin-bottom: 30px;
 }
 
 @media screen and (min-width: 480px) {
@@ -765,23 +797,27 @@ ul {
   }
 }
 
-@media screen and (min-width: 480px) and (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .team__foto {
     width: calc((100% - 2 * 30px) / 2);
     margin: 15px;
   }
 }
 
-@media screen and (min-width: 480px) and (min-width: 1200px) {
+@media screen and (min-width: 1200px) {
   .team__foto {
     width: 270px;
     margin: 0 30px 0 0;
   }
 }
 
-@media screen and (min-width: 480px) {
+.team__foto:last-child {
+  margin-right: 0;
+}
+
+@media screen and (max-width: 767px) {
   .team__foto:last-child {
-    margin-right: 0;
+    margin-bottom: 0;
   }
 }
 
@@ -846,5 +882,319 @@ ul {
   background-color: #2196f3;
   fill: #ffffff;
   outline: none;
+}
+
+@media screen and (max-width: 1199px) {
+  .client__container {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .client__text {
+    font-size: 28px;
+    line-height: 1.18;
+    text-align: center;
+    letter-spacing: 0.03em;
+  }
+}
+
+.client__block {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+@media screen and (min-width: 1200px) {
+  .client__block {
+    justify-content: space-between;
+  }
+}
+
+.client__link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: #afb1b8;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  height: 92px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-widht: 480px) {
+  .client__link {
+    width: 210px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .client__link {
+    width: 226px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .client__link {
+    width: 170px;
+  }
+}
+
+.client__link:hover, .client__link:focus {
+  fill: #2196f3;
+  border: 1px solid #2196f3;
+  outline: none;
+}
+
+@media screen and (max-width: 767px) {
+  .client__item {
+    width: calc((100% - 2 * 30px) / 2);
+    margin: 15px;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .client__item {
+    width: calc((100% - 3 * 30px) / 3);
+    margin: 15px;
+  }
+}
+
+.footer {
+  background-color: #2f303a;
+  padding: 60px 0;
+  display: block;
+}
+
+@media screen and (max-width: 767px) {
+  .footer__container {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__container {
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer__desktop {
+    display: flex;
+    justify-content: space-around;
+  }
+}
+
+.footer__address {
+  font-style: normal;
+  width: 229px;
+}
+
+@media screen and (max-width: 767px) {
+  .footer__address {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer__address {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__address {
+    text-align: start;
+  }
+}
+
+.footer__title {
+  color: #ffffff;
+  margin-top: 20px;
+}
+
+.footer__addres-blokc {
+  padding-left: 0px;
+}
+
+.footer__item {
+  padding-top: 9px;
+}
+
+.footer__link {
+  color: rgba(255, 255, 255, 0.6);
+  text-decoration: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer__link:focus, .footer__link:hover {
+  color: #2196f3;
+}
+
+@media screen and (max-width: 767px) {
+  .footer__social-network {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 60px;
+    margin-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer__social-network {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__social-network {
+    text-align: start;
+    margin-left: 70px;
+    padding-top: 12px;
+    margin-right: 93px;
+  }
+}
+
+.footer__slogan {
+  margin-bottom: 20px;
+  color: #ffffff;
+}
+
+.footer__form {
+  padding-top: 12px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer__form {
+    margin-top: 60px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__form {
+    margin-top: 0;
+  }
+}
+
+.footer__email {
+  width: 358px;
+  height: 50px;
+  margin-right: 10px;
+  padding-left: 16px;
+  background-color: #2F303A;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  color: #ffffff;
+}
+
+@media screen and (max-width: 767px) {
+  .footer__email {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__email {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__email {
+    width: 358px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer__desktop-mail {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__desktop-mail {
+    display: flex;
+    text-align: start;
+  }
+}
+
+.footer__button {
+  position: relative;
+  width: 200px;
+  height: 50px;
+  padding: 0;
+  margin: 0;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+@media screen and (max-width: 1199px) {
+  .footer__button {
+    margin-top: 20px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__button {
+    margin-top: 47px;
+  }
+}
+
+.footer__text-button {
+  padding-right: 20px;
+}
+
+.footer__button-icon {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-top: 13px;
+  margin-right: 28px;
+  width: 24px;
+  height: 24px;
+}
+
+.logo__studio-footer {
+  color: #ffffff;
+}
+
+.social-network {
+  display: flex;
+  justify-content: space-between;
+}
+
+.social-network__footer {
+  display: flex;
+  justify-content: center;
+}
+
+.social-network__items {
+  display: flex;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.social-network__items:nth-child(-n + 3) {
+  margin-right: 10px;
+}
+
+.social-network__link {
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-network__link:hover, .social-network__link:focus {
+  background-color: #2196f3;
+}
+
+.social-network__icon {
+  width: 20px;
+  height: 20px;
+  fill: #ffffff;
 }
 /*# sourceMappingURL=main.css.map */
