--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -78,7 +78,7 @@ ul {
 }
 
 /* logo text */
-.logo__web, .logo__studio {
+.logo__web, .logo__studio, .logo__studio-footer {
   font-family: Raleway, cursive;
   font-size: 26px;
   line-height: 1.19;
@@ -92,7 +92,45 @@ ul {
   text-decoration: none;
 }
 
+.social-network__link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 44px;
+  width: 44px;
+  border-radius: 50%;
+}
+
+.footer__title, .footer__link {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+
+.footer__slogan, .footer__email {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+}
+
 /* text-btn-hero */
+.footer__button {
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  color: #fff;
+}
+
+.footer__button {
+  cursor: pointer;
+  border-radius: 4px;
+  border: 0px;
+  background-color: #2196f3;
+}
+
 .header {
   position: relative;
   border-bottom: 1px solid #ececec;
@@ -450,5 +488,243 @@ ul {
 
 .logo__studio {
   color: #000000;
+}
+
+.footer {
+  background-color: #2f303a;
+  padding: 60px 0;
+  display: block;
+}
+
+@media screen and (max-width: 767px) {
+  .footer__container {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__container {
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer__desktop {
+    display: flex;
+    justify-content: space-around;
+  }
+}
+
+.footer__address {
+  font-style: normal;
+  width: 229px;
+}
+
+@media screen and (max-width: 767px) {
+  .footer__address {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer__address {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__address {
+    text-align: start;
+  }
+}
+
+.footer__title {
+  color: #ffffff;
+  margin-top: 20px;
+}
+
+.footer__addres-blokc {
+  padding-left: 0px;
+}
+
+.footer__item {
+  padding-top: 9px;
+}
+
+.footer__link {
+  color: rgba(255, 255, 255, 0.6);
+  text-decoration: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer__link:focus, .footer__link:hover {
+  color: #2196f3;
+}
+
+@media screen and (max-width: 767px) {
+  .footer__social-network {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 60px;
+    margin-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer__social-network {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__social-network {
+    text-align: start;
+    margin-left: 70px;
+    padding-top: 12px;
+    margin-right: 93px;
+  }
+}
+
+.footer__slogan {
+  margin-bottom: 20px;
+  color: #ffffff;
+}
+
+.footer__form {
+  padding-top: 12px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer__form {
+    margin-top: 60px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__form {
+    margin-top: 0;
+  }
+}
+
+.footer__email {
+  width: 358px;
+  height: 50px;
+  margin-right: 10px;
+  padding-left: 16px;
+  background-color: #2F303A;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  color: #ffffff;
+}
+
+@media screen and (max-width: 767px) {
+  .footer__email {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__email {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__email {
+    width: 358px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer__desktop-mail {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__desktop-mail {
+    display: flex;
+    text-align: start;
+  }
+}
+
+.footer__button {
+  position: relative;
+  width: 200px;
+  height: 50px;
+  padding: 0;
+  margin: 0;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+@media screen and (max-width: 1199px) {
+  .footer__button {
+    margin-top: 20px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__button {
+    margin-top: 47px;
+  }
+}
+
+.footer__text-button {
+  padding-right: 20px;
+}
+
+.footer__button-icon {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-top: 13px;
+  margin-right: 28px;
+  width: 24px;
+  height: 24px;
+}
+
+.logo__studio-footer {
+  color: #ffffff;
+}
+
+.social-network {
+  display: flex;
+  justify-content: space-between;
+}
+
+.social-network__footer {
+  display: flex;
+  justify-content: center;
+}
+
+.social-network__items {
+  display: flex;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.social-network__items:nth-child(-n + 3) {
+  margin-right: 10px;
+}
+
+.social-network__link {
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-network__link:hover, .social-network__link:focus {
+  background-color: #2196f3;
+}
+
+.social-network__icon {
+  width: 20px;
+  height: 20px;
+  fill: #ffffff;
 }
 /*# sourceMappingURL=portfolio.css.map */
