--- a/sass/components/_team-card.scss
+++ b/sass/components/_team-card.scss
@@ -9,6 +9,12 @@
 
     &__development{
         @extend %heading-sechion;
+
+        @media screen and(max-width:1199px) {
+            font-size: 28px;
+            line-height: 1.18;
+            text-align: center;
+            letter-spacing: 0.03em;}
     }
 
     &__block {
@@ -26,27 +32,33 @@
         }
 
     &__foto {
+        background-color: $color-white;
+        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
+        border-radius: 0px 0px 4px 4px;
+        margin-bottom: 30px;
+
+
+
         @media screen and(min-width:480px) {
-            width: 450px;
-            @media screen and(min-width:768px) {
+            width: 450px;}
+
+        @media screen and(min-width:768px) {
             width: calc((100% - 2 * 30px) / 2);
             margin: 15px;}
 
         @media screen and(min-width:1200px) {
             width: 270px;
             margin:0 30px 0 0;}
+        
             
-            &:last-child{
-                margin-right: 0;
-            }        }
+            &:last-child {
+            margin-right: 0;
 
-
-
-        background-color: $color-white;
-        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-          0px 2px 1px rgba(0, 0, 0, 0.2);
-        border-radius: 0px 0px 4px 4px;
-      }
+        @media screen and(max-width:767px) {
+            margin-bottom: 0;}
+        }   
+    }
 
     &__text {
             padding-top: 30px;
