--- a/css/main.css
+++ b/css/main.css
@@ -143,7 +143,7 @@ ul {
 }
 
 /* text-btn-hero */
-.hero__button, .footer__button {
+.hero__button, .footer__button, .form__button {
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
@@ -1196,5 +1196,225 @@ ul {
   width: 20px;
   height: 20px;
   fill: #ffffff;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop__svg {
+  margin-top: 4px;
+  width: 18px;
+  height: 18px;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) skew(0deg, 0deg);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  background-color: #ffffff;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+    height: 609px;
+  }
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  overflow: visible;
+}
+
+.button-modal {
+  position: absolute;
+  right: 0%;
+  margin-top: 8px;
+  margin-right: 8px;
+  padding: 0;
+  width: 30px;
+  height: 30px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: #ffffff;
+  cursor: pointer;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-modal:hover {
+  fill: #2196f3;
+  border-color: #2196f3;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) skew(30deg, 20deg);
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  margin: 12px 40px 20px 40px;
+}
+
+@media screen and (min-width: 1200px) {
+  .form {
+    width: 448px;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .form {
+    width: 370px;
+  }
+}
+
+.form__text {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+  margin-bottom: 12px;
+}
+
+.form__label {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  margin-top: 10px;
+}
+
+.form__label:focus-within > .form__svg {
+  fill: #2196f3;
+}
+
+.form__label:focus-within > .form__input {
+  border: 2px solid #2196f3;
+  outline: 0;
+  outline-offset: 0;
+}
+
+.form__label:focus-within > .form__textarea {
+  border: 2px solid #2196f3;
+  outline: 0;
+  outline-offset: 0;
+}
+
+.form__name {
+  margin-bottom: 4px;
+  font-size: 12px;
+  line-height: 1.6666;
+  letter-spacing: 0.01em;
+  color: #757575;
+}
+
+.form__input {
+  height: 40px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-left: 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  cursor: pointer;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form__svg {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  margin-bottom: 11px;
+  margin-left: 12px;
+  width: 18px;
+  height: 18px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form__button {
+  width: 200px;
+  height: 50px;
+  cursor: pointer;
+  margin-top: 30px;
+  margin-left: 124px;
+  background: #188CE8;
+  border: 0;
+  border-radius: 4px;
+}
+
+.form__textarea {
+  height: 120px;
+  padding: 12px 16px;
+  resize: none;
+  cursor: pointer;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.checkbox__imput {
+  position: absolute;
+  appearance: none;
+}
+
+.checkbox__imput:checked + .checkbox__icon {
+  border-color: #2196f3;
+  background-color: #2196f3;
+  background-image: url("../images/icon.svg");
+  background-size: contain;
+  background-origin: border-box;
+}
+
+.checkbox__icon {
+  border: 2px solid #212121;
+  border-radius: 4px;
+  margin-right: 8px;
+  width: 16px;
+  height: 15px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-image 250ms cubic-bezier(0.4, 0, 0.2, 1), background-size 250ms cubic-bezier(0.4, 0, 0.2, 1), backgroud-origin 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox__text {
+  display: flex;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+
+.checkbox.checkbox__agreement {
+  padding-left: 5px;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  text-decoration-line: underline;
+  color: #2196F3;
 }
 /*# sourceMappingURL=main.css.map */
