--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -29,16 +29,13 @@
 
     background-color: $color-white;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
+    @media screen and (min-width:480px){
+        width: 450px;}
 
     @media screen and (min-width:1200px){
-        width: 528px;
-        height: 581px;}
-  
-      @media screen and (min-width:480px){
-        width: 450px;
-        height: 609px;
+            width: 528px;}
       }  
-  }
   
   .backdrop.is-hidden {
     opacity: 0;
@@ -78,22 +75,29 @@
     display: flex;
     flex-direction: column;
     margin:12px 40px 20px 40px;
+   
+    @media screen and (min-width:480px){
+        width: 370px;} 
+        
     @media screen and (min-width:1200px){
-        width: 448px;}
-  
-      @media screen and (min-width:480px){
-        width: 370px;}  
+        width: 448px;
+        height: 581px;}
 
 
     &__text{
         font-weight: 700;
         font-size: 20px;
+
+        @media screen and(max-whight:1199px){
+        line-height: 1.5; 
+        }
         line-height: 1.15;
         text-align: center;
         letter-spacing: 0.03em;
         color:rgba(33, 33, 33, 1);
       
         margin-bottom: 12px;
+        margin-top: 40px;
       }
 
     &__label{
@@ -157,7 +161,8 @@
         cursor: pointer;
 
         margin-top: 30px;
-        margin-left: 124px;
+        margin-left: auto;
+        margin-right: auto;
         
         @extend %btn-text;
         
@@ -213,8 +218,16 @@
 
     &__text{
         display: flex;
-      font-size: 14px;
-      line-height: 1.71;
+
+        @media screen and(max-width:1199px){
+         font-size: 12px;
+         line-height: 1.16;   
+        }
+
+        @media screen and(min-width:1200px){
+        font-size: 14px;
+        line-height: 1.71;}
+     
       letter-spacing: 0.03em;
       
       color: #757575;
