--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -21,6 +21,11 @@ body {
     font-family: Roboto, sans-serif;
   }
 
+img {
+  display: block;
+max-width: 100%;
+height: auto;}
+
 input,
 body,
 h1,
