--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -10,6 +10,12 @@ body {
   font-family: Roboto, sans-serif;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 input,
 body,
 h1,
@@ -85,7 +91,6 @@ ul {
   letter-spacing: 0.03em;
 }
 
-/*  heder-link */
 .header__link, .header__link--contakt, .header__mail, .menu-social__network {
   font-weight: 500;
   letter-spacing: 0.02em;
@@ -253,7 +258,7 @@ ul {
   }
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767px) {
   .header__link--contakt {
     font-size: 24px;
     line-height: 1.16px;
@@ -289,6 +294,12 @@ ul {
   }
 }
 
+@media screen and (max-width: 767px) {
+  .header__link--contakt-tel {
+    color: #2196f3;
+  }
+}
+
 @media screen and (min-width: 480px) {
   .header__link--contakt-tel {
     font-weight: 500;
@@ -296,6 +307,13 @@ ul {
     line-height: 1.17;
     letter-spacing: 0.02em;
     color: #2196f3;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header__link--contakt-tel {
+    font-size: 12px;
+    line-height: 1.166;
   }
 }
 
@@ -448,9 +466,14 @@ ul {
 
 .menu-social__network {
   display: flex;
-  font-size: 18px;
   line-height: 1.2;
   color: #2196f3;
+}
+
+@media screen and (min-width: 480px) {
+  .menu-social__network {
+    font-size: 18px;
+  }
 }
 
 .menu-social__item {
@@ -459,9 +482,20 @@ ul {
 
 .menu-social__link {
   text-decoration: none;
-  padding: 0 10px;
   color: #2196f3;
   border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+@media screen and (min-width: 480px) {
+  .menu-social__link {
+    padding: 0 10px;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .menu-social__link {
+    padding: 0 3px;
+  }
 }
 
 .menu-social__link--first {
@@ -483,6 +517,222 @@ ul {
 
 .logo__studio {
   color: #000000;
+}
+
+.selection-buttons {
+  display: flex;
+}
+
+@media screen and (max-width: 767px) {
+  .selection-buttons {
+    flex-wrap: wrap;
+    margin-bottom: 25px;
+    margin-top: 60px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .selection-buttons {
+    justify-content: center;
+    margin-top: 60px;
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .selection-buttons {
+    margin-top: 94px;
+    margin-bottom: 50px;
+  }
+}
+
+.selection-buttons__item:not(:last-child) {
+  margin-right: 8px;
+}
+
+.selection-buttons__job {
+  color: #212121;
+  background-color: #f5f4fa;
+  display: inline-block;
+  min-width: 73px;
+  cursor: pointer;
+  border-radius: 4px;
+  border: 0px;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.63;
+  letter-spacing: 0.03em;
+  text-align: center;
+  padding: 6px 22px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (max-width: 767px) {
+  .selection-buttons__job {
+    margin-bottom: 15px;
+  }
+}
+
+.selection-buttons__job:hover, .selection-buttons__job:focus {
+  color: #ffffff;
+  background-color: #2196f3;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+}
+
+.project {
+  /*     display: flex;
+    flex-wrap: wrap;
+    padding-left: 0px; */
+  /* .project{
+  display: flex;
+  flex-basis: calc((100% - 3* 30px) / 3);
+  margin-right: 30px;
+  margin-bottom: 30px;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+} */
+}
+
+.project__item {
+  /*  width: 370px; */
+  /* margin-right: 30px; */
+  margin-bottom: 30px;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 480px) {
+  .project__item {
+    width: 450px;
+    height: 404px;
+  }
+}
+
+.project__item:nth-child(3n) {
+  margin-right: 0px;
+}
+
+.project__item:nth-last-child(-n + 3) {
+  margin-bottom: 0px;
+}
+
+.project__item:hover, .project__item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.project__item:hover .portfolio-img::before,
+.project__item:focus .portfolio-img::before {
+  transform: translateY(0%);
+}
+
+.project__item:focus .portfolio-img__title,
+.project__item:hover .portfolio-img__title {
+  transform: translate(-50%, 0);
+}
+
+.project__link {
+  text-decoration: none;
+}
+
+.project__text {
+  padding: 20px 24px;
+  border-bottom: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+}
+
+.project__name {
+  color: #212121;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+
+.project__description {
+  color: #757575;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.03em;
+}
+
+.portfolio-img {
+  display: block;
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio-img::before {
+  position: absolute;
+  display: inline-block;
+  content: "";
+  /* width: 370px;
+        height: 294px; */
+  background-color: rgba(33, 150, 243, 0.9);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(404px);
+}
+
+@media screen and (min-width: 480px) {
+  .portfolio-img::before {
+    width: 450px;
+    height: 294px;
+  }
+}
+
+.portfolio-img::before {
+  position: absolute;
+  display: inline-block;
+  content: "";
+  /*  width: 370px;
+        height: 294px; */
+  background-color: rgba(33, 150, 243, 0.9);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(404px);
+}
+
+@media screen and (min-width: 480px) {
+  .portfolio-img::before {
+    width: 450px;
+    height: 294px;
+  }
+}
+
+.portfolio-img__icon {
+  display: block;
+  /* max-width: 370px; */
+  height: auto;
+}
+
+@media screen and (min-width: 480px) {
+  .portfolio-img__icon {
+    width: 450px;
+    height: 294px;
+  }
+}
+
+.portfolio-img__title {
+  position: absolute;
+  display: flex;
+  top: 0%;
+  left: 50%;
+  transform: translate(-50%, 404px);
+  /*         min-width: 322px; */
+  margin-top: 63px;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: #ffffff;
+}
+
+@media screen and (min-width: 480px) {
+  .portfolio-img__title {
+    width: 402px;
+    margin-top: 77px;
+    margin-bottom: 77px;
+  }
 }
 
 .footer {
