--- a/sass/components/_heder-page.scss
+++ b/sass/components/_heder-page.scss
@@ -110,7 +110,7 @@ margin-left: auto;
 &__link--contakt {
     @extend %header__link;
 
-    @media screen and (min-width:480px) {
+    @media screen and (max-width:767px) {
       font-size: 24px;
       line-height: 1.16px;
       color: $primer-text-color;}
@@ -139,12 +139,22 @@ margin-left: auto;
 }
 
     &-tel{
+      @media screen and (max-width:767px) {
+        color: $accent-color;}
+
       @media screen and (min-width:480px){
         font-weight: 500;
         font-size: 34px;
         line-height: 1.17;
         letter-spacing: 0.02em;
         color: $accent-color;}
+
+        
+
+        @media screen and(min-width:768px){
+          font-size: 12px;
+          line-height: 1.166;  
+        }
     }
 }
 
