--- a/sass/components/_menu-social-heder-mob.scss
+++ b/sass/components/_menu-social-heder-mob.scss
@@ -12,9 +12,11 @@
   &__network{
     display: flex;
     @extend %header__link; 
-    font-size: 18px;
     line-height: 1.2;
-    color: $accent-color 
+    color: $accent-color; 
+
+    @media screen and(min-width:480px){ 
+      font-size: 18px;}
   }
   
   &__item{
@@ -23,8 +25,15 @@
   }
   
     &__link{
+
+      @media screen and(min-width:480px){
+      padding: 0 10px;}
+
+      @media screen and(max-width:479px){
+        padding: 0 3px;} 
+
+
     text-decoration: none;
-    padding: 0 10px;
     color: $accent-color; 
     border-right: 1px solid rgba(33, 33, 33, 0.2);}
   
