--- a/sass/components/_team-card.scss
+++ b/sass/components/_team-card.scss
@@ -60,6 +60,11 @@
         }   
     }
 
+    &__img {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
     &__text {
             padding-top: 30px;
     }
