--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -97,6 +97,24 @@ ul {
   text-decoration: none;
 }
 
+@media screen and (max-width: 767px) {
+  .project__item, .portfolio-img::before, .portfolio-img__icon {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .project__item, .portfolio-img::before, .portfolio-img__icon {
+    width: 354px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .project__item, .portfolio-img::before, .portfolio-img__icon {
+    width: 370px;
+  }
+}
+
 .social-network__link {
   display: flex;
   align-items: center;
@@ -153,6 +171,7 @@ ul {
 
 @media screen and (max-width: 767px) {
   .header__mob--menu {
+    z-index: 20;
     position: absolute;
     width: 100vw;
     height: 100vh;
@@ -306,7 +325,6 @@ ul {
     font-size: 34px;
     line-height: 1.17;
     letter-spacing: 0.02em;
-    color: #2196f3;
   }
 }
 
@@ -528,6 +546,7 @@ ul {
     flex-wrap: wrap;
     margin-bottom: 25px;
     margin-top: 60px;
+    padding-left: 15px;
   }
 }
 
@@ -582,39 +601,14 @@ ul {
 }
 
 .project {
-  /*     display: flex;
-    flex-wrap: wrap;
-    padding-left: 0px; */
-  /* .project{
   display: flex;
-  flex-basis: calc((100% - 3* 30px) / 3);
-  margin-right: 30px;
-  margin-bottom: 30px;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-} */
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .project__item {
-  /*  width: 370px; */
-  /* margin-right: 30px; */
   margin-bottom: 30px;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-@media screen and (min-width: 480px) {
-  .project__item {
-    width: 450px;
-    height: 404px;
-  }
-}
-
-.project__item:nth-child(3n) {
-  margin-right: 0px;
-}
-
-.project__item:nth-last-child(-n + 3) {
-  margin-bottom: 0px;
 }
 
 .project__item:hover, .project__item:focus {
@@ -631,6 +625,32 @@ ul {
   transform: translate(-50%, 0);
 }
 
+@media screen and (min-width: 768px) {
+  .project__item {
+    flex-basis: calc((100% - 2 * 30px) / 2);
+    margin: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .project__item {
+    flex-basis: calc((100% - 3 * 30px) / 3);
+    margin: 15px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .project__item--tab {
+    height: 440px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .project__item--tab {
+    height: auto;
+  }
+}
+
 .project__link {
   text-decoration: none;
 }
@@ -640,6 +660,18 @@ ul {
   border-bottom: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
+}
+
+@media screen and (min-width: 768px) {
+  .project__text--tab {
+    height: 146px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .project__text--tab {
+    height: auto;
+  }
 }
 
 .project__name {
@@ -664,52 +696,18 @@ ul {
 }
 
 .portfolio-img::before {
+  height: 294px;
   position: absolute;
   display: inline-block;
   content: "";
-  /* width: 370px;
-        height: 294px; */
   background-color: rgba(33, 150, 243, 0.9);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transform: translateY(404px);
-}
-
-@media screen and (min-width: 480px) {
-  .portfolio-img::before {
-    width: 450px;
-    height: 294px;
-  }
-}
-
-.portfolio-img::before {
-  position: absolute;
-  display: inline-block;
-  content: "";
-  /*  width: 370px;
-        height: 294px; */
-  background-color: rgba(33, 150, 243, 0.9);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transform: translateY(404px);
-}
-
-@media screen and (min-width: 480px) {
-  .portfolio-img::before {
-    width: 450px;
-    height: 294px;
-  }
 }
 
 .portfolio-img__icon {
   display: block;
-  /* max-width: 370px; */
-  height: auto;
-}
-
-@media screen and (min-width: 480px) {
-  .portfolio-img__icon {
-    width: 450px;
-    height: 294px;
-  }
+  height: 294px;
 }
 
 .portfolio-img__title {
@@ -718,8 +716,10 @@ ul {
   top: 0%;
   left: 50%;
   transform: translate(-50%, 404px);
-  /*         min-width: 322px; */
-  margin-top: 63px;
+  width: 80%;
+  margin-top: 49px;
+  margin-bottom: 49px;
+  text-align: center;
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
@@ -733,6 +733,26 @@ ul {
     margin-top: 77px;
     margin-bottom: 77px;
   }
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio-img__title {
+    width: 306px;
+    margin-top: 49px;
+    margin-bottom: 49px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio-img__title {
+    width: 322px;
+    margin-top: 63px;
+    margin-bottom: 63px;
+  }
+}
+
+.portfolio-container {
+  padding: 0;
 }
 
 .footer {
