--- a/sass/components/_heder-page.scss
+++ b/sass/components/_heder-page.scss
@@ -14,6 +14,7 @@
 
 &__mob--menu{
   @media screen and(max-width:767px){
+  z-index: 20;
   position: absolute;
   width: 100vw;
   height: 100vh;
@@ -146,8 +147,7 @@ margin-left: auto;
         font-weight: 500;
         font-size: 34px;
         line-height: 1.17;
-        letter-spacing: 0.02em;
-        color: $accent-color;}
+        letter-spacing: 0.02em;}
 
         
 
