--- a/sass/components/_portfolio-btn-grup.scss
+++ b/sass/components/_portfolio-btn-grup.scss
@@ -4,7 +4,8 @@
     @media screen and(max-width:767px){
         flex-wrap: wrap;
         margin-bottom:25px;
-        margin-top: 60px;   
+        margin-top: 60px;
+        padding-left: 15px;   
     }  
 
     @media screen and(min-width:768px){
