--- a/sass/components/_portfolio-project.scss
+++ b/sass/components/_portfolio-project.scss
@@ -1,37 +1,16 @@
 .project {
-/*     display: flex;
-    flex-wrap: wrap;
-    padding-left: 0px; */
-
-    /* .project{
   display: flex;
-  flex-basis: calc((100% - 3* 30px) / 3);
-  margin-right: 30px;
-  margin-bottom: 30px;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    flex-wrap: wrap;
+    justify-content: center;
 
-} */
 
     &__item {
-        @media screen and(min-width:480px) {
-         width: 450px;
-         height: 404px;   
-        }
+      margin-bottom: 30px;
 
-       /*  width: 370px; */
-        /* margin-right: 30px; */
-        margin-bottom: 30px;
+      @extend %portfolio-card;
       
         transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
       
-
-        &:nth-child(3n) {
-        margin-right: 0px;
-      }
-        &:nth-last-child(-n + 3) {
-        margin-bottom: 0px;
-      }
-
         &:hover,
         &:focus {
       box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
@@ -48,6 +27,28 @@
   transform: translate(-50%, 0);
   }
 
+  @media screen and(max-width:767px){
+  }
+
+  @media screen and(min-width:768px){
+    flex-basis: calc((100% - 2 * 30px) / 2);
+  margin: 15px;}
+
+  @media screen and(min-width:1200px){
+      flex-basis: calc((100% - 3 * 30px) / 3);
+    margin: 15px;
+  }
+
+
+
+        &--tab{
+          @media screen and(min-width: 768px){
+            height: 440px;
+          }
+          @media screen and(min-width: 1200px){
+            height: auto;
+          }
+        }
 }
 
     &__link {
@@ -59,6 +60,15 @@
         border-bottom: 1px solid #eeeeee;
         border-right: 1px solid #eeeeee;
         border-left: 1px solid #eeeeee;
+
+        &--tab{
+          @media screen and(min-width: 768px){
+            height: 146px;
+          }
+          @media screen and(min-width: 1200px){
+            height: auto;
+          }
+        }
       }
 
 
@@ -90,34 +100,12 @@
 
 
     &::before {
-        @media screen and(min-width:480px) {
-            width: 450px;
-            height: 294px;   
-           }
+        @extend %portfolio-card;
+        height: 294px;
 
         position: absolute;
         display: inline-block;
         content: "";
-        /* width: 370px;
-        height: 294px; */
-        background-color: rgba(33, 150, 243, 0.9);
-        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-      
-        transform: translateY(404px);
-      }
-
-
-    &::before {
-        @media screen and(min-width:480px) {
-            width: 450px;
-            height: 294px;   
-           }
-
-        position: absolute;
-        display: inline-block;
-        content: "";
-       /*  width: 370px;
-        height: 294px; */
         background-color: rgba(33, 150, 243, 0.9);
         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
       
@@ -125,13 +113,9 @@
       }
 
     &__icon {
-        @media screen and(min-width:480px) {
-            width: 450px;
-            height: 294px;   
-           }
+      @extend %portfolio-card;
         display: block;
-        /* max-width: 370px; */
-        height: auto;
+        height: 294px;
       }
 
     &__title {
@@ -140,15 +124,28 @@
         top: 0%;
         left: 50%;
         transform: translate(-50%, 404px);
+        width: 80%;
+        margin-top: 49px;
+        margin-bottom: 49px;
+        text-align: center;
 
         @media screen and(min-width:480px) {
             width: 402px; 
             margin-top: 77px;
             margin-bottom: 77px;
            }
-      
-/*         min-width: 322px; */
-        margin-top: 63px;
+
+        @media screen and(min-width:768px) {
+          width: 306px; 
+          margin-top: 49px;
+          margin-bottom: 49px;
+           }
+           
+           @media screen and(min-width:1200px) {
+            width: 322px; 
+            margin-top: 63px;
+            margin-bottom: 63px;
+           }
       
         font-size: 18px;
         line-height: 1.56;
@@ -159,3 +156,7 @@
       }
 
   }
+
+.portfolio-container{
+padding: 0;
+}
