--- a/sass/components/_positive-features.scss
+++ b/sass/components/_positive-features.scss
@@ -41,7 +41,11 @@
 
       @media screen and (min-width: 1200px){
         width: calc((100% - 4 * 30px) / 4);
-        margin-right: 0px;}         
+        margin-right: 0px;}
+        
+        &--mob{
+          @media screen and (max-width: 767px){
+              margin-bottom: 0;}}
       }
 
     &__svg {
