--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -60,7 +60,7 @@ ul {
 }
 
 .section {
-  padding-top: 60px;
+  padding: 60px 0;
 
   @media screen and (min-width: 1200px) {
     padding: 94px 0px;
