--- a/sass/components/_client.scss
+++ b/sass/components/_client.scss
@@ -1,4 +1,6 @@
 .client{
+    @media screen and(max-width:1199px) {
+        padding-bottom: 45px;}
 
     &__container {
         @media screen and(max-width:1199px) {
@@ -10,6 +12,7 @@
         @extend %heading-sechion;
         
         @media screen and(max-width:1199px) {
+            margin-bottom: 15px;
             font-size: 28px;
             line-height: 1.18;
             text-align: center;
@@ -19,10 +22,6 @@
     &__block {
         display: flex;
         flex-wrap: wrap;
-
-        @media screen and(min-width:768px){
-        margin-bottom: 37px;    
-        }
 
         @media screen and(min-width:1200px){
             justify-content: space-between;
@@ -61,13 +60,13 @@
     }
 
     &__item{
-        @media screen and (max-width:767px){
-        width: calc((100% - 2 * 30px) / 2);
-        margin: 15px;}
 
         @media screen and (max-width:1199px) {
         width: calc((100% - 3 * 30px) / 3);
         margin: 15px;}
+
+        @media screen and (max-width:767px){
+            width: calc((100% - 2 * 30px) / 2);}
     }
 
 }
