--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -100,7 +100,6 @@
       }
     
     &__email{
-        width: 358px;
         height: 50px;
         margin-right: 10px;
         padding-left: 16px;
@@ -115,11 +114,11 @@
 
         color: $color-white;
 
-        @media screen and (max-width:767px){
-            width:100% }
+        @media screen and (max-width:479px){
+          width:100%; }
 
-            @media screen and (min-width:1200px){
-                width: 450px;}
+        @media screen and (min-width:480px){
+            width:450px; }
 
         @media screen and (min-width:1200px){   
         width: 358px;}
