--- a/sass/components/_heder-page.scss
+++ b/sass/components/_heder-page.scss
@@ -123,14 +123,15 @@ margin-left: auto;
     align-items: center;
     padding-top: 0;
     padding-bottom: 0;
+
+    @media screen and(min-width:1200px){
+      padding-top: 32px;
+      padding-bottom: 32px;
+      font-size: 14px;
+      line-height: 1.14;}
   
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);}
-    @media screen and(min-width:1200px){
-      font-size: 14px;
-      line-height: 1.14;
-      padding-top: 32px;
-      padding-bottom: 32px;}
 
     &:hover,
     &:focus{
@@ -153,7 +154,11 @@ margin-left: auto;
 
         @media screen and(min-width:768px){
           font-size: 12px;
-          line-height: 1.166;  
+          line-height: 1.166; 
+          
+        @media screen and(min-width:1200px){
+            font-size: 14px;
+            line-height: 1.14;}
         }
     }
 }
