--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -12,7 +12,7 @@
         rgba(47, 48, 58, 0.4) ),
         url(../images/header-mob-480-1x.jpg);
     background-color: #c4c4c4;   
-    max-width: 480px;
+    background-repeat: no-repeat;
     height: 400px;
     background-size: 480px 400px;
 
