--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -233,13 +233,15 @@
       color: #757575;
       }
 
+    &__agreement{
+      color: #2196F3;
+    }
+
     &.checkbox__agreement{
         padding-left: 5px;
         font-size: 14px;
         line-height: 1.71;
         letter-spacing: 0.03em;
         text-decoration-line: underline;
-      
-        color: #2196F3;
       }
 }
