--- a/sass/components/_portfolio-project.scss
+++ b/sass/components/_portfolio-project.scss
@@ -49,6 +49,18 @@
             height: auto;
           }
         }
+
+        &--tab-last{  
+          @media screen and(max-width: 1199px){
+          margin-bottom: 0;}
+
+
+        @media screen and(min-width: 768px){
+          margin-right: auto;
+        }
+        @media screen and(min-width: 1200px){
+          margin-right: 15px;
+        }}
 }
 
     &__link {
@@ -127,7 +139,6 @@
         width: 80%;
         margin-top: 49px;
         margin-bottom: 49px;
-        text-align: center;
 
         @media screen and(min-width:480px) {
             width: 402px; 
