--- a/sass/components/_team-card.scss
+++ b/sass/components/_team-card.scss
@@ -4,8 +4,6 @@
 
     &__container{
         background-color: $primary-bg-color;
-        @media screen and(max-width:1199px) {
-        padding-bottom: 60px;}
         }
 
     &__development{
@@ -15,7 +13,16 @@
             font-size: 28px;
             line-height: 1.18;
             text-align: center;
-            letter-spacing: 0.03em;}
+            letter-spacing: 0.03em;
+            margin-bottom: 30px;}
+
+            @media screen and(min-width:768px){
+                margin-bottom: 15px;
+            }
+            @media screen and(min-width:1200px) {
+                margin-bottom: 50px;}
+
+    
     }
 
     &__block {
@@ -82,4 +89,9 @@
     
         margin-top: 10px;
     }
+}
+
+.team__foto--tab{
+    @media screen and(min-width:768px) {
+    margin-bottom: 0;}
 }
