--- a/css/main.css
+++ b/css/main.css
@@ -66,10 +66,6 @@ ul {
   }
 }
 
-.section:first-child {
-  padding-top: 0px;
-}
-
 .text__transporent {
   position: absolute;
   white-space: nowrap;
@@ -276,7 +272,7 @@ ul {
 @media screen and (min-width: 768px) {
   .header__contact {
     align-items: center;
-    margin-left: 50px;
+    margin-left: 73px;
   }
 }
 
@@ -648,16 +644,11 @@ ul {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
-@media screen and (min-width: 1200px) {
-  .positive-features {
-    padding-bottom: 0;
-  }
-}
-
 @media screen and (min-width: 768px) {
   .positive-features__item {
     display: flex;
     flex-wrap: wrap;
+    margin: -15px;
   }
 }
 
@@ -698,6 +689,9 @@ ul {
 
 .positive-features__paragraph {
   margin-bottom: 30px;
+  /*         &--mob{
+          @media screen and (max-width: 767px){
+              margin-bottom: 0;}} */
 }
 
 @media screen and (min-width: 768px) {
@@ -710,13 +704,6 @@ ul {
 @media screen and (min-width: 1200px) {
   .positive-features__paragraph {
     width: calc((100% - 4 * 30px) / 4);
-    margin-right: 0px;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .positive-features__paragraph--mob {
-    margin-bottom: 0;
   }
 }
 
@@ -839,12 +826,6 @@ ul {
   }
 }
 
-@media screen and (min-width: 768px) {
-  .team__development {
-    margin-bottom: 15px;
-  }
-}
-
 @media screen and (min-width: 1200px) {
   .team__development {
     margin-bottom: 50px;
@@ -857,6 +838,7 @@ ul {
 
 @media screen and (min-width: 768px) {
   .team__block {
+    margin: -15px;
     display: flex;
     flex-wrap: wrap;
   }
@@ -865,6 +847,7 @@ ul {
 @media screen and (min-width: 1200px) {
   .team__block {
     justify-content: space-between;
+    margin: 0;
   }
 }
 
@@ -923,12 +906,6 @@ ul {
   margin-top: 10px;
 }
 
-@media screen and (min-width: 768px) {
-  .team__foto--tab {
-    margin-bottom: 0;
-  }
-}
-
 @media screen and (max-width: 1199px) {
   .social {
     padding-top: 16px;
@@ -980,21 +957,8 @@ ul {
 }
 
 @media screen and (max-width: 1199px) {
-  .client {
-    padding-bottom: 45px;
-  }
-}
-
-@media screen and (max-width: 1199px) {
-  .client__container {
-    padding-left: 0;
-    padding-right: 0;
-  }
-}
-
-@media screen and (max-width: 1199px) {
   .client__text {
-    margin-bottom: 15px;
+    margin-bottom: 30px;
     font-size: 28px;
     line-height: 1.18;
     text-align: center;
@@ -1003,6 +967,7 @@ ul {
 }
 
 .client__block {
+  margin: -15px;
   display: flex;
   flex-wrap: wrap;
 }
@@ -1010,6 +975,7 @@ ul {
 @media screen and (min-width: 1200px) {
   .client__block {
     justify-content: space-between;
+    margin: 0;
   }
 }
 
@@ -1050,7 +1016,7 @@ ul {
 
 @media screen and (max-width: 1199px) {
   .client__item {
-    width: calc((100% - 3 * 30px) / 3);
+    width: calc((100% - 90px) / 3);
     margin: 15px;
   }
 }
