--- a/sass/components/_portfolio-project.scss
+++ b/sass/components/_portfolio-project.scss
@@ -1,7 +1,11 @@
 .project {
-  display: flex;
+    display: flex;
     flex-wrap: wrap;
     justify-content: center;
+
+    @media screen and(min-width: 768px){
+      margin: -15px;
+    }
 
 
     &__item {
@@ -51,9 +55,9 @@
         }
 
         &--tab-last{  
-          @media screen and(max-width: 1199px){
-          margin-bottom: 0;}
-
+          @media screen and(max-width: 767px){
+            margin-bottom: 0;
+          }
 
         @media screen and(min-width: 768px){
           margin-right: auto;
@@ -167,7 +171,3 @@
       }
 
   }
-
-.portfolio-container{
-padding: 0;
-}
