--- a/sass/components/_positive-features.scss
+++ b/sass/components/_positive-features.scss
@@ -1,12 +1,10 @@
 .positive-features {
-
-    @media screen and(min-width: 1200px){
-      padding-bottom: 0;}
     
     &__item {
       @media screen and(min-width:768px){
         display: flex;
-        flex-wrap: wrap;}
+        flex-wrap: wrap;
+      margin: -15px;}
 
       @media screen and(min-width:1200px){
         display: flex;
@@ -42,12 +40,11 @@
       margin: 15px;}
 
       @media screen and (min-width: 1200px){
-        width: calc((100% - 4 * 30px) / 4);
-        margin-right: 0px;}
+        width: calc((100% - 4 * 30px) / 4);}
         
-        &--mob{
+/*         &--mob{
           @media screen and (max-width: 767px){
-              margin-bottom: 0;}}
+              margin-bottom: 0;}} */
       }
 
     &__svg {
