--- a/sass/components/_team-card.scss
+++ b/sass/components/_team-card.scss
@@ -16,9 +16,6 @@
             letter-spacing: 0.03em;
             margin-bottom: 30px;}
 
-            @media screen and(min-width:768px){
-                margin-bottom: 15px;
-            }
             @media screen and(min-width:1200px) {
                 margin-bottom: 50px;}
 
@@ -29,12 +26,14 @@
         text-align: center;
 
         @media screen and(min-width:768px) {
+        margin: -15px;
         display: flex;
         flex-wrap: wrap;}
        
 
         @media screen and(min-width: 1200px){
-            justify-content: space-between;   
+            justify-content: space-between;
+            margin: 0;  
         }
 
         }
@@ -89,9 +88,4 @@
     
         margin-top: 10px;
     }
-}
-
-.team__foto--tab{
-    @media screen and(min-width:768px) {
-    margin-bottom: 0;}
 }
