--- a/sass/components/_positive-features.scss
+++ b/sass/components/_positive-features.scss
@@ -42,9 +42,9 @@
       @media screen and (min-width: 1200px){
         width: calc((100% - 4 * 30px) / 4);}
         
-/*         &--mob{
+        &--mob{
           @media screen and (max-width: 767px){
-              margin-bottom: 0;}} */
+              margin-bottom: 0;}}
       }
 
     &__svg {
